Дописал сетку на первой и второй странице

--- a/catalog.html
+++ b/catalog.html
@@ -188,10 +188,10 @@
             </div>
             <ul class="found-hotels-list">
               <li class="found-hotels-list__item">
-                <p class="image-hotel">
+                <p class="found-hotels-list__image">
                   <img src="img/amara-resor-spa.jpg" width="135" height="90" alt="Amara Resort & Spa">
                 </p>
-                <div class="column-info-reserve">
+                <div class="found-hotels-list__column-info">
                   <a class="found-hotels-list__hotel-link" href="#">
                     Amara Resort & Spa
                   </a>
@@ -199,7 +199,7 @@
                     <p class="found-hotels-list__text">Гостиница</p>
                     <p class="found-hotels-list__text">От 4000 р.</p>
                   </div>
-                  <p class="column-reserve">
+                  <p class="found-hotels-list__column-reserve">
                     <a class="button found-hotels-list__details-button" href="#">
                       Подробнее
                     </a>
@@ -211,18 +211,18 @@
                 <p class="found-hotels-list__rating">Рейтинг: 8,5</p>
               </li>
               <li class="found-hotels-list__item">
-                <p class="image-hotel">
+                <p class="found-hotels-list__image">
                   <img src="img/desert-quail-inn.jpg" width="135" height="90" alt="Desert Quail Inn">
                 </p>
-                <div class="column-info-reserve">
+                <div class="found-hotels-list__column-info">
                   <a class="found-hotels-list__hotel-link" href="#">
                     Desert Quail Inn
                   </a>
-                  <div class="desc">
+                  <div class="found-hotels-list__desc">
                     <p class="found-hotels-list__text">Гостиница</p>
                     <p class="found-hotels-list__text">От 4000 р.</p>
                   </div>
-                  <p class="column-reserve">
+                  <p class="found-hotels-list__column-reserve">
                     <a class="button found-hotels-list__details-button" href="#">
                       Подробнее
                     </a>
@@ -234,18 +234,18 @@
                 <p class="found-hotels-list__rating">Рейтинг: 8,9</p>
               </li>
               <li class="found-hotels-list__item">
-                <p class="image-hotel">
+                <p class="found-hotels-list__image">
                   <img src="img/villas-at-poco-diablo.jpg" width="135" height="90" alt="Villas at Poco Diablo">
                 </p>
-                <div class="column-info-reserve">
+                <div class="found-hotels-list__column-info">
                   <a class="found-hotels-list__hotel-link" href="#">
                     Villas at Poco Diablo
                   </a>
-                  <div class="desc">
+                  <div class="found-hotels-list__desc">
                     <p class="found-hotels-list__text">Апартаменты</p>
                     <p class="found-hotels-list__text">От 2000 р.</p>
                   </div>
-                  <p class="column-reserve">
+                  <p class="found-hotels-list__column-reserve">
                     <a class="button found-hotels-list__details-button" href="#">
                       Подробнее
                     </a>
