--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
       <main class="container">
         <h1 class="visually-hidden">Турагентство «Седона»</h1>
-        <p class="container__image">
-          <img src="img/image-slogan.png" width="458" height="352" alt="Welcome to the gorgeous Sedona. Sedona «Because the grand canyon sucks!»">
+        <p class="container__box-image">
+          <img class="container__image" src="img/image-slogan.png" width="458" height="352" alt="Welcome to the gorgeous Sedona. Sedona «Because the grand canyon sucks!»">
         </p>
         <section class="features">
           <h2 class="visually-hidden">Наши преимущества</h2>
@@ -45,9 +45,9 @@
           <ul class="features-list">
 
             <li class="features-list__item features-list__item_blue">
-              <div class="features-list__column">
+              <div class="features-list__column features-list__column_text">
                 <h3 class="features-list__title features-list__text_white">
-                  Настоящий Городок
+                  Настоящий<br> Городок
                 </h3>
                 <span class="features-list__number features-list__text_white">
                   №1
@@ -57,27 +57,27 @@
                 </p>
               </div>
               <div class="features-list__column features-list__column_size_m">
-                <img src="img/city.jpg" width="800" height="256" alt="Город Седона">
+                <img class="features-list__image" src="img/city.jpg" width="800" height="256" alt="Город Седона">
               </div>
             </li>
 
-            <li class="features-list__item features-list__item_size_m">
+            <li class="features-list__item features-list__column_text features-list__item_size_m">
               <h3 class="features-list__title">Жилье</h3>
               <p class="features-list__text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
             </li>
 
-            <li class="features-list__item features-list__item_size_m">
+            <li class="features-list__item features-list__column_text features-list__item_size_m">
               <h3 class="features-list__title">Еда</h3>
               <p class="features-list__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
             </li>
 
-            <li class="features-list__item features-list__item_size_m">
+            <li class="features-list__item features-list__column_text features-list__item_size_m">
               <h3 class="features-list__title">Сувениры</h3>
               <p class="features-list__text">Не только китайского, но и местного производства!</p>
             </li>
 
             <li class="features-list__item features-list__item_blue">
-              <div class="features-list__column">
+              <div class="features-list__column  features-list__column_text">
                 <h3 class="features-list__title features-list__text_white">
                   Там есть мост дьявола
                 </h3>
@@ -88,24 +88,24 @@
                   Да, по нему можно пройти! Если конечно вы осмелитесь
                 </p>
               </div>
-              <div class="features-list__column features-list__column_size_m features-list__column_or">
-                <img src="img/canyon.jpg" width="800" height="256" alt="Мост дьявола">
+              <div class="features-list__column features-list__column_size_m features-list__column_order">
+                <img class="features-list__image" src="img/canyon.jpg" width="800" height="256" alt="Мост дьявола">
               </div>
             </li>
 
-            <li class="features-list__item features-list__item_gray">
+            <li class="features-list__item features-list__column_text features-list__item_gray">
               <h3 class="features-list__title">Небольшая Площадь</h3>
               <span class="features-list__number">№3</span>
               <p class="features-list__text">Все достопримечательности находятся очень близко</p>
             </li>
 
-            <li class="features-list__item features-list__item_gray">
+            <li class="features-list__item features-list__column_text features-list__item_gray">
               <h3 class="features-list__title">Красивая Дорога</h3>
               <span class="features-list__number">№4</span>
               <p class="features-list__text">Ехать в Седону из Лас-вегаса совсем не скучно!</p>
             </li>
 
-            <li class="features-list__item features-list__item_gray">
+            <li class="features-list__item features-list__column_text features-list__item_gray">
               <h3 class="features-list__title">Мало туристов</h3>
               <span class="features-list__number">№5</span>
               <p class="features-list__text">Большинство едет в гранд каньон и толпится там</p>
