--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
           </div>
           <ul class="features-list">
 
-            <li class="features-list__item features-list__item_blue">
+            <li class="features-list__item features-list__item_blue features-list__item_text">
               <div class="features-list__column features-list__column_text">
                 <h3 class="features-list__title features-list__text_white">
-                  Настоящий<br> Городок
+                  Настоящий Городок
                 </h3>
                 <span class="features-list__number features-list__text_white">
                   №1
@@ -61,22 +61,22 @@
               </div>
             </li>
 
-            <li class="features-list__item features-list__column_text features-list__item_size_m">
+            <li class="features-list__item features-list__item_size_m features-list__icon_home">
               <h3 class="features-list__title">Жилье</h3>
               <p class="features-list__text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
             </li>
 
-            <li class="features-list__item features-list__column_text features-list__item_size_m">
+            <li class="features-list__item features-list__item_size_m features-list__icon_food">
               <h3 class="features-list__title">Еда</h3>
               <p class="features-list__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
             </li>
 
-            <li class="features-list__item features-list__column_text features-list__item_size_m">
+            <li class="features-list__item features-list__item_size_m features-list__icon_souvenir">
               <h3 class="features-list__title">Сувениры</h3>
               <p class="features-list__text">Не только китайского, но и местного производства!</p>
             </li>
 
-            <li class="features-list__item features-list__item_blue">
+            <li class="features-list__item features-list__item_blue features-list__item_text">
               <div class="features-list__column  features-list__column_text">
                 <h3 class="features-list__title features-list__text_white">
                   Там есть мост дьявола
@@ -93,21 +93,21 @@
               </div>
             </li>
 
-            <li class="features-list__item features-list__column_text features-list__item_gray">
+            <li class="features-list__item features-list__item_gray">
               <h3 class="features-list__title">Небольшая Площадь</h3>
-              <span class="features-list__number">№3</span>
+              <span class="features-list__number features-list__number_gray">№3</span>
               <p class="features-list__text">Все достопримечательности находятся очень близко</p>
             </li>
 
-            <li class="features-list__item features-list__column_text features-list__item_gray">
+            <li class="features-list__item features-list__item_gray">
               <h3 class="features-list__title">Красивая Дорога</h3>
-              <span class="features-list__number">№4</span>
+              <span class="features-list__number features-list__number_gray">№4</span>
               <p class="features-list__text">Ехать в Седону из Лас-вегаса совсем не скучно!</p>
             </li>
 
-            <li class="features-list__item features-list__column_text features-list__item_gray">
+            <li class="features-list__item features-list__item_gray">
               <h3 class="features-list__title">Мало туристов</h3>
-              <span class="features-list__number">№5</span>
+              <span class="features-list__number features-list__number_gray">№5</span>
               <p class="features-list__text">Большинство едет в гранд каньон и толпится там</p>
             </li>
           </ul>
