начинаю писать форму

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <li class="features-list__item features-list__item_blue features-list__item_text">
               <div class="features-list__column  features-list__column_text">
                 <h3 class="features-list__title features-list__text_white">
-                  Там есть мост дьявола
+                  Там есть<br> мост дьявола
                 </h3>
                 <span class="features-list__number features-list__text_white">
                   №2
@@ -115,7 +115,7 @@
 
         <section class="reservation">
           <h2 class="visually-hidden">Бронирование гостиницы</h2>
-          <div class="reservation__column inner">
+          <div class="reservation__column">
             <p class="reservation__lead">Заинтересовались?</p>
             <p class="reservation__excerpt">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
             <a class="button reservation__button-search" href="hotels.html">Поиск гостиницы в седоне</a>
