--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
-    <body>
+    <body class="main-body">
       <div class="inner">
         <header class="main-header">
           <nav class="main-navigation">
