--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body class="main-body">
     <div class="inner">
       <header class="main-header">
          <nav class="main-navigation">
@@ -66,7 +66,7 @@
               <p class="features-list__text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
             </li>
 
-            <li class="features-list__item features-list__item_size_m features-list__icon_food">
+            <li class="features-list__item features-list__item_size_m features-list__item_padding_m features-list__icon_food">
               <h3 class="features-list__title">Еда</h3>
               <p class="features-list__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
             </li>
@@ -127,20 +127,28 @@
               <fieldset class="modal-form__fieldset">
                 <legend class="visually-hidden">Время прибывания</legend>
                 <div class="modal-form__column" >
-                  <label  class="modal-form__text" for="arrival-data">Дата заезда:</label>
+                  <label class="modal-form__text" for="arrival-data">Дата заезда:</label>
                   <div class="column__input-icon">
                     <input class="modal-form__field" type="text" name="arrival-data" placeholder="24 Апреля 2017" id="arrival-data">
                     <a class="modal-form__calendar-button" href="#" >
-                      <img src="img/calendar.svg" width="21" height="20" alt="Календарь">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22" fill="#cacaca">
+                        <path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/>
+                        <path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/>
+                      </svg>
                     </a>
                   </div>
                   </div>
                 <div class="modal-form__column">
-                  <label class="modal-form__text modal-form__text_size_m" for="departure-date">Дата выезда:</label>
+                  <label class="modal-form__text" for="departure-date">
+                    Дата выезда:
+                  </label>
                   <div class="column__input-icon">
                     <input class="modal-form__field" type="text" name="departure-date" placeholder="4 июля 2017" id="departure-date">
                     <a href="#" class="modal-form__calendar-button" href="#" >
-                      <img src="img/calendar.svg" width="21" height="20" alt="Календарь">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22" fill="#cacaca">
+                        <path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/>
+                        <path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/>
+                      </svg>
                     </a>
                   </div>
                 </div>
@@ -150,7 +158,7 @@
                 <legend class="visually-hidden">Колличество гостей</legend>
                 <div class="modal-form__column-guests">
                   <div class="modal-form__column-adult">
-                    <label class="modal-form__text modal-form__text_adult" for="adult">Взрослые:</label>
+                    <label class="modal-form__text" for="adult">Взрослые:</label>
                     <div class="modal-form__input">
                       <button class="modal-form__increase-button" type="button" name="increase-button"></button>
                       <input class="modal-form__field modal-form__field_size_m" type="text" name="adult" placeholder="2" id="adult">
@@ -175,7 +183,7 @@
         </section>
       </main>
       <div class="position-footer-column">
-        <section class="main-map inner">
+        <section class="main-map">
           <h2 class="visually-hidden">Как до нас добраться</h2>
           <img src="img/map.png" width="1200" height="593" alt="Координаты города Седона">
         </section>
@@ -185,21 +193,32 @@
           </div>
           <div class="main-footer__column">
             <ul class="main-footer__social-list">
-              <li>
+              <li class="main-footer__social-item">
                 <a class="button social-button social-twitter" href="#">
                   <span class="visually-hidden">Twitter</span>
+                  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="15" viewBox="0 0 17 15">
+                    <path class="social-button-color" fill="#FFF" d="M10.95.144c1.685-.496 2.984.27 3.577 1.179.673-.231 1.331-.481 2.011-.708a2.345 2.345 0 0 1-.857 1.768c.685.17 1.304-.491 1.304-.491-.169 1-1.006 1.788-1.563 2.024-.231 6.75-3.175 11.217-10.077 11.082h-.446c-.41 0-4.164-.46-4.898-1.887 2.271.196 3.893-.422 4.693-1.177-.96-.3-2.679-.477-2.979-2.95.349.106.564.228 1.19.119C1.705 8.247.374 7.53.448 5.33c.285.328 1.067.536 1.34.472C1.085 5.561-.182 2.442.894.85c1.818 1.854 3.735 3.606 7.152 3.773C8.254 2.33 9.183.793 10.95.144z"/>
+                  </svg>
                 </a>
               </li>
-              <li>
+              <li class="main-footer__social-item">
                 <a class="button social-button social-facebook" href="#">
                   <span class="visually-hidden">Facebook</span>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
+                    <path class="social-button-color" fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/>
+                  </svg>
                 </a>
               </li>
-              <li>
+              <li class="main-footer__social-item">
                 <a class="button social-button social-youtube" href="#">
                   <span class="visually-hidden">Youtube</span>
+                  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="16" viewBox="0 0 20 16">
+                    <path class="social-button-color" fill="#FFF" d="M17 0H3C1.35 0 0 1.35 0 3v10c0 1.65 1.35 3 3 3h14c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zM6.027 11.998V4.002L15.014 8l-8.987 3.998z"/>
+                  </svg>
+
                 </a>
               </li>
+
             </ul>
           </div>
           <div class="main-footer__column">
